--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
-    "node-fetch": "^2.6.1"
+    "@11ty/eleventy-cache-assets": "^2.0.3",
+    "moment": "^2.29.1"
   }
 }
